  errors in the future, introduce and use...
* PEP_PROTOCOL_VERSION_MAJOR, PEP_PROTOCOL_VERSION_MINOR: ...New macros.
* PEP_VERSION is now only a deprecated alias for PEP_PROTOCOL_VERSION,
  automatically computed from the two macros above.
* Rename PEP_CANNOT_SET_PEP_VERSION to PEP_CANNOT_SET_PEP_PROTOCOL_VERSION; keep
  the old name as a compatibility alias

v3.2.0-RC13
* add NEWS file
* add release script (for the Engine maintainer): the Engine version is now in a
  machine-generated file src/pEpEngine_version.h
* Merge pull request 'PEMA-41 Make the ObjC adapterbuild for iOS agains the
  latest engine (master/v3.2.0-RC11)' (#92) from dirk/pEpEngine:PEMA-41 into
  master

v3.2.0-RC12
* handle_pong: fix bug preventing notification from being called, reported by
  Alex Sualdea
* Merge pull request 'PEMA-103-hotfix' (#88) from
  TSaschabc/pEpEngine:PEMA-103-hotfix into master
* Update sqlite amalgamation to 3.40.0

v3.2.0-RC11
* add the new pEp_log functionality -- notice that some platform code is
  UNTESTED; I am waiting for feedback from platform maintainers;
* add the new pEp_debug functionality;
* convert existing code to use the new logging and debugging functionality;
* set_debug_color: remove DYNAMIC_API function.
* log_event, log_service, _service_error_log:  remove DYNAMIC_API functions,
  replaced by the new log functionality in src/pEp_log.h; I could re-implement
  the old functions based on the new API if people want that, but using the API

v3.2.0-RC10
From this point on we consistently adopt the new naming scheme for tags: we
start the tag name with "v" instead of "Release_".
* fix compilation on windows (probably: untested).

Release_3.2.0-RC9
* BUILD: Fix - Effectively add include and lib dir from local.conf' (#82)
* unfinished debug / log changes
* (broken on windows)

v3.2.0-RC8
No complete change log for this RC, the first in the 3.x series to be actually
used.  The most important change from 2.x is Key-Election Removal; the list of